# toy-piano

./: .gitignore  Cargo.toml  README.md  blueprint.md  bundle_macos.sh  development.md  roadmap.md
.github/workflows/: build.yml  release.yml
assets/: salamander-readme.txt
examples/: make_transparent.rs
src/: main.rs
src/audio/: mod.rs
src/midi/: mod.rs
src/ui/: mod.rs
